reuse only unfinished tasks